src/objects/Website_Table__c.object
<CustomObject>
    <description>Tables for the Stellaxius Website.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description text that will appear linked with the Value field.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon_Class__c</fullName>
        <label>Icon Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <inlineHelpText>Name of the table where the pair (value, description) will appear.</inlineHelpText>
        <label>Table</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Values</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Value that identifies the description.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Website Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Value__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Value__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
    </listViews>
    <listViews>
        <fullName>Mission</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Value__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>Mission</value>
        </filters>
        <label>Mission</label>
    </listViews>
    <listViews>
        <fullName>Services</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Value__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>Services</label>
    </listViews>
    <listViews>
        <fullName>Values</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Value__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>Values</value>
        </filters>
        <label>Values</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{00000000}</displayFormat>
        <label>Website Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>